--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
     "@tailwindcss/postcss": "^4.1.4",
+    "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
+    "formik": "^2.4.6",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-is": "^19.1.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
