--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@next/swc-win32-x64-msvc": "^15.3.1",
     "@tailwindcss/postcss": "^4.1.4",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
