--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
     "formik": "^2.4.6",
-    "next": "15.2.4",
+    "next": "^15.3.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/next": "^9.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
