--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.2",
     "@next/swc-win32-x64-msvc": "^15.3.1",
     "@tailwindcss/postcss": "^4.1.4",
+    "@tanstack/react-query": "^5.74.11",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.1",
     "formik": "^2.4.6",
